// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon AlertCircleIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon AlertFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon AlertIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
    />
  </svg>
</div>
`;

exports[`Icon ArrowDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3v17M17 16l-5 5-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12H4M8 17l-5-5 5-5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 12h17M16 7l5 5-5 5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17 16-4.646 4.646a.5.5 0 0 1-.708 0L7 16m0-8.207 4.646-4.646a.5.5 0 0 1 .708 0L17 7.793"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21V4M7 8l5-5 5 5"
    />
  </svg>
</div>
`;

exports[`Icon AttachmentIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
    />
  </svg>
</div>
`;

exports[`Icon AvatarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.5 19.177C6.743 17.962 9.423 17 12 17s5.257.962 7.5 2.177m-4.295-9.224a2.97 2.97 0 0 1-.382 1.445c-.25.444-.609.822-1.047 1.102a3.332 3.332 0 0 1-3.004.28 3.198 3.198 0 0 1-1.249-.888 3.018 3.018 0 0 1-.666-1.347 2.948 2.948 0 0 1 .075-1.489c.152-.483.425-.922.797-1.28a3.25 3.25 0 0 1 1.643-.845 3.335 3.335 0 0 1 1.856.175 3.18 3.18 0 0 1 1.44 1.135c.352.507.54 1.103.537 1.712Z"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon BusinessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21V3H3v18h12Zm0 0h6V7.5h-6V21ZM7 6v2m0 2v2m4-6v2m0 2v2m7 2v2m0-6v2M7 15h4v6H7v-6Z"
    />
  </svg>
</div>
`;

exports[`Icon CalendarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 3v4M16 3v4M21 20V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1ZM3 12h18"
    />
  </svg>
</div>
`;

exports[`Icon ChartBarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H6.2c-1.12 0-1.68 0-2.108-.218a2 2 0 0 1-.874-.874C3 19.48 3 18.92 3 17.8V3m5 5v9m10-4v4M13 5v12"
    />
  </svg>
</div>
`;

exports[`Icon ChartLineIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H4.6c-.56 0-.84 0-1.054-.109a1 1 0 0 1-.437-.437C3 20.24 3 19.96 3 19.4V3m17 5-3.919 4.183c-.148.158-.223.237-.312.278a.5.5 0 0 1-.253.044c-.098-.01-.194-.06-.387-.16l-3.258-1.69c-.193-.1-.289-.15-.387-.16a.5.5 0 0 0-.253.044c-.09.04-.164.12-.312.278L7 15"
    />
  </svg>
</div>
`;

exports[`Icon CheckIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 18-6-6 6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m18 15-6-6-6 6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m11 17-5-5 5-5M18 17l-5-5 5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m13 17 5-5-5-5M6 17l5-5-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7.5 8 4.323-4.323a.25.25 0 0 1 .354 0L16.5 8M16.5 16l-4.323 4.323a.25.25 0 0 1-.354 0L7.5 16"
    />
  </svg>
</div>
`;

exports[`Icon CloseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18M6 6l12 12"
    />
  </svg>
</div>
`;

exports[`Icon CopyIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      x="9"
      y="9"
    />
    <path
      d="M5 15H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v1"
    />
  </svg>
</div>
`;

exports[`Icon CornerDownRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 10 5 5m0 0-5 5m5-5H8a4 4 0 0 1-4-4V4"
    />
  </svg>
</div>
`;

exports[`Icon DeleteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M10 17.5V10m4 7.5V10m-.2-8h-3.6C9.537 2 9 1.895 9 3v3h6V3c0-1.105-.537-1-1.2-1Zm4.857 18.777c-.063.691-.693 1.223-1.45 1.223H6.794c-.757 0-1.387-.532-1.45-1.223L4 6h16l-1.343 14.777Z"
    />
  </svg>
</div>
`;

exports[`Icon DownloadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16m9-13v12m0 0 4-4m-4 4-4-4"
    />
  </svg>
</div>
`;

exports[`Icon EditIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7M18.5 2.5a2.121 2.121 0 1 1 3 3L12 15l-4 1 1-4 9.5-9.5Z"
    />
  </svg>
</div>
`;

exports[`Icon EmailIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2m20 0v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6m20 0-10 7L2 6"
    />
  </svg>
</div>
`;

exports[`Icon ExitIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"
    />
  </svg>
</div>
`;

exports[`Icon ExternalLinkIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 15 21 3M15 3h6M21 9V3M7 3H4.09A1.069 1.069 0 0 0 3 4.037v15.898A1.077 1.077 0 0 0 4.062 21h15.876A1.069 1.069 0 0 0 21 19.934V17"
    />
  </svg>
</div>
`;

exports[`Icon FacebookIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 2h-3a5 5 0 0 0-5 5v3H6v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3V2Z"
    />
  </svg>
</div>
`;

exports[`Icon FactoryIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17.183 12.846 3.135.784c.4.1.682.46.682.873V20.1a.9.9 0 0 1-.9.9H3.9a.9.9 0 0 1-.9-.9v-9.647a.9.9 0 0 1 1.118-.873l11.262 2.815m1.803.45a.9.9 0 0 0 1.117-.873V3.9a.9.9 0 0 0-.9-.9h-1.8a.9.9 0 0 0-.9.9v7.622a.9.9 0 0 0 .68.873m1.803.45-1.801-.45h-.002M7.5 17.4h-.9v-.9h.9v.9Zm3.6-.9h.9v.9h-.9v-.9Z"
    />
  </svg>
</div>
`;

exports[`Icon FileIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
    />
    <path
      d="M13 2v7h7"
    />
  </svg>
</div>
`;

exports[`Icon FileTextIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8m-6-6 6 6m-6-6v6h6m-4 5H8m8 4H8m2-8H8"
    />
  </svg>
</div>
`;

exports[`Icon FilterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M3 12h18M3 18h18M7 4v4m8 2v4m-8 2v4"
    />
  </svg>
</div>
`;

exports[`Icon GripIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM8.5 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM8.5 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
    />
  </svg>
</div>
`;

exports[`Icon HelpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3m.08 4h.01M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z"
    />
  </svg>
</div>
`;

exports[`Icon HomeIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 11v10a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V11"
    />
    <path
      d="M2 12C3.836 10.077 12 2 12 2s8.164 8.077 10 10"
    />
  </svg>
</div>
`;

exports[`Icon InboxIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12h-6l-2 3h-4l-2-3H2"
    />
    <path
      d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
    />
  </svg>
</div>
`;

exports[`Icon InfoFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon InfoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
    />
  </svg>
</div>
`;

exports[`Icon InstagramIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.5 6.5h.01M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm9 9.37a4 4 0 1 1-7.914 1.174A4 4 0 0 1 16 11.37Z"
    />
  </svg>
</div>
`;

exports[`Icon LicenceBusinessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 10h2m-2 4h2m-6-4-4.125 4.125L6 12.25M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon LicenceIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 10h2m-2 4h2M6.17 15a3 3 0 0 1 5.66 0M11 11a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon LinkedInIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-7a6 6 0 0 1 6-6ZM6 9H2v12h4V9ZM4 6a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
    />
  </svg>
</div>
`;

exports[`Icon LockIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 11V7a5 5 0 1 1 10 0v4M5 11h14a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon MenuIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M3 12h18M3 18h18"
    />
  </svg>
</div>
`;

exports[`Icon MinusIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
  </svg>
</div>
`;

exports[`Icon MoveLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 7-5 5m0 0 5 5m-5-5h11m5-7v14"
    />
  </svg>
</div>
`;

exports[`Icon MoveRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 17 5-5m0 0-5-5m5 5H9M4 5v14"
    />
  </svg>
</div>
`;

exports[`Icon PauseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 4h4v16H6zM14 4h4v16h-4z"
    />
  </svg>
</div>
`;

exports[`Icon PermitIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 22h6a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v3m10-5v4a2 2 0 0 0 2 2h4M7 16.5 8 22l-3-1-3 1 1-5.5m2 .5a3 3 0 1 0 0-5.999A3 3 0 0 0 5 17Z"
    />
  </svg>
</div>
`;

exports[`Icon PieChartIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.21 15.89A10 10 0 1 1 8 2.83"
    />
    <path
      d="M22 12A10 10 0 0 0 12 2v10z"
    />
  </svg>
</div>
`;

exports[`Icon PlayIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m5 3 14 9-14 9V3z"
    />
  </svg>
</div>
`;

exports[`Icon PlusIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 5v14M5 12h14"
    />
  </svg>
</div>
`;

exports[`Icon PrintIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 9V2h12v7M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2M6 14h12v8H6v-8Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressBlockedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
    />
  </svg>
</div>
`;

exports[`Icon ProgressDoingIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressNotRequiredIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m4.93 4.93 14.14 14.14M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressPausedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressTodoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      stroke-dasharray="4 4"
    />
  </svg>
</div>
`;

exports[`Icon ScrollbarArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.957 6.319a.299.299 0 0 1 .043.147v11.103a.31.31 0 0 1-.161.263.34.34 0 0 1-.327.002l-9.361-5.552a.327.327 0 0 1-.111-.114.299.299 0 0 1 0-.3.319.319 0 0 1 .111-.114l9.361-5.552a.34.34 0 0 1 .327.002.31.31 0 0 1 .118.115Z"
    />
  </svg>
</div>
`;

exports[`Icon ScrollbarArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.043 17.718A.305.305 0 0 1 7 17.57V6.467a.31.31 0 0 1 .161-.263h0a.34.34 0 0 1 .327-.001l9.361 5.551a.321.321 0 0 1 .111.115.296.296 0 0 1 0 .299.31.31 0 0 1-.111.114l-9.361 5.552a.332.332 0 0 1-.161.041.329.329 0 0 1-.284-.157Z"
    />
  </svg>
</div>
`;

exports[`Icon SearchIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15.557 15.556 6.364 6.364"
    />
    <circle
      cx="9.899"
      cy="9.899"
      r="7"
    />
  </svg>
</div>
`;

exports[`Icon SettingsIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="3"
    />
    <path
      d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
    />
  </svg>
</div>
`;

exports[`Icon SuccessFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon SuccessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
    <path
      d="m7 13 3 3 7-7"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 1h2.67A2.31 2.31 0 0 1 21 3v7a2.31 2.31 0 0 1-2.33 2H16m-7 2v4a3 3 0 0 0 3 3l4-9V1H4.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3H9Z"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 21H3a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3m7-2V4a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3H13Z"
    />
  </svg>
</div>
`;

exports[`Icon TwitterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5 0-.279-.028-.556-.08-.83A7.72 7.72 0 0 0 23 3Z"
    />
  </svg>
</div>
`;

exports[`Icon UnlockIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 11V7a5 5 0 0 1 9.9-1M5 11h14a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon UploadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
    />
  </svg>
</div>
`;

exports[`Icon UsersIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.546 20.182v-1.818a3.637 3.637 0 0 0-3.637-3.637H5.636A3.636 3.636 0 0 0 2 18.364v1.818m20 0v-1.818a3.637 3.637 0 0 0-2.727-3.519M15.636 3.936a3.636 3.636 0 0 1 0 7.046M12.91 7.455a3.636 3.636 0 1 1-7.273 0 3.636 3.636 0 0 1 7.273 0Z"
    />
  </svg>
</div>
`;

exports[`Icon WalletIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon WarningCircleIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
    />
  </svg>
</div>
`;

exports[`Icon WarningFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon WarningIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5Zm9-8V9m0 9"
    />
  </svg>
</div>
`;

exports[`Icon WebsiteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10m10-10c0-5.523-4.477-10-10-10m10 10H2m10 10C6.477 22 2 17.523 2 12m10 10a15.3 15.3 0 0 0 4-10 15.3 15.3 0 0 0-4-10m0 20a15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10M2 12C2 6.477 6.477 2 12 2"
    />
  </svg>
</div>
`;

exports[`Icon XIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.555 4 5.333 20m11.395-.206L5.113 4.861A.533.533 0 0 1 5.534 4H7.74a.53.53 0 0 1 .42.206l11.615 14.933a.533.533 0 0 1-.42.861H17.15a.534.534 0 0 1-.42-.206Z"
    />
  </svg>
</div>
`;
